// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> color should render a heading with custom color 1`] = `
<div>
  <h5
    class="Textweb__Text-sc-1qdvl51-0 iHGjAb Spaceweb__Space-sc-1fdjx97-0 hamRTl"
    color="primary.900"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;

exports[`<Heading /> should render a heading with default props 1`] = `
<div>
  <h5
    class="Textweb__Text-sc-1qdvl51-0 dmbCIG Spaceweb__Space-sc-1fdjx97-0 hamRTl"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;

exports[`<Heading /> size should render a heading with size large 1`] = `
<div>
  <h4
    class="Textweb__Text-sc-1qdvl51-0 fEpNBI Spaceweb__Space-sc-1fdjx97-0 hamRTl"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h4>
</div>
`;

exports[`<Heading /> size should render a heading with size medium 1`] = `
<div>
  <h5
    class="Textweb__Text-sc-1qdvl51-0 dmbCIG Spaceweb__Space-sc-1fdjx97-0 hamRTl"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;

exports[`<Heading /> size should render a heading with size xlarge 1`] = `
<div>
  <h3
    class="Textweb__Text-sc-1qdvl51-0 ibowDk Spaceweb__Space-sc-1fdjx97-0 hamRTl"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h3>
</div>
`;

exports[`<Heading /> size should render a heading with size xxlarge 1`] = `
<div>
  <h2
    class="Textweb__Text-sc-1qdvl51-0 fRppxW Spaceweb__Space-sc-1fdjx97-0 hamRTl"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h2>
</div>
`;

exports[`<Heading /> size should render a heading with size xxxlarge 1`] = `
<div>
  <h1
    class="Textweb__Text-sc-1qdvl51-0 cPEhQt Spaceweb__Space-sc-1fdjx97-0 hamRTl"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h1>
</div>
`;

exports[`<Heading /> weight should render a heading with bold weight 1`] = `
<div>
  <h5
    class="Textweb__Text-sc-1qdvl51-0 dmbCIG Spaceweb__Space-sc-1fdjx97-0 hamRTl"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;

exports[`<Heading /> weight should render a heading with regular weight 1`] = `
<div>
  <h5
    class="Textweb__Text-sc-1qdvl51-0 htHjDa Spaceweb__Space-sc-1fdjx97-0 hamRTl"
    color="shade.980"
    data-testid="ds-text"
  >
    Heading
  </h5>
</div>
`;
